--- a/spec/fixtures/likes.yml
+++ b/spec/fixtures/likes.yml
@@ -2,3 +2,13 @@ one:
   id: 1
   photo_id: 101
   user_id: 1234
+
+two:
+  id: 2
+  photo_id: 1
+  user_id: 1234
+
+three:
+  id: 3
+  photo_id: 3
+  user_id: 1235
