--- a/spec/fixtures/photos.yml
+++ b/spec/fixtures/photos.yml
@@ -22,8 +22,10 @@ not_liked_yet:
   id: 100
   name: "100"
   photo_image_uid: "100"
+  deck_id: 3
 
 liked:
   id: 101
   name: "101"
   photo_image_uid: "101"
+  deck_id: 3
