--- a/spec/fixtures/photos.yml
+++ b/spec/fixtures/photos.yml
@@ -8,29 +8,56 @@ deck1-1:
 
 deck1-2:
   name: MyString
+  id: 2
   photo_image_uid: 2013/09/15/13_55_56_173_keiko
   deck_id: 1
 
 deck2-1:
+  id: 3
   name: MyString
   photo_image_uid: 2013/09/15/14_00_37_694_keiko
   deck_id: 2
 
 deck2-2:
+  id: 4
   name: MyString
   photo_image_uid: 2013/09/15/14_00_37_715_keiko
   deck_id: 2
 
+deck5-1:
+  id: 5
+  name: "photo1"
+  photo_image_uid: 2013/09/15/13_55_56_153_keiko
+  deck_id: 5
+
+deck5-2:
+  id: 6
+  name: "photo2"
+  photo_image_uid: 2013/09/15/13_55_56_173_keiko
+  deck_id: 5
+
+deck6-1:
+  id: 7
+  name: "photo1"
+  photo_image_uid: 2013/09/15/13_55_56_153_keiko
+  deck_id: 6
+
+deck6-2:
+  id: 8
+  name: "photo2"
+  photo_image_uid: 2013/09/15/13_55_56_173_keiko
+  deck_id: 6
+
 not_liked_yet:
   id: 100
   name: "100"
-  photo_image_uid: 2013/09/15/14_00_37_694_keiko
+  photo_image_uid: 2013/09/15/13_55_56_153_keiko
   deck_id: 3
 
 liked:
   id: 101
   name: "101"
-  photo_image_uid: 2013/09/15/14_00_37_715_keiko
+  photo_image_uid: 2013/09/15/13_55_56_173_keiko
   deck_id: 3
 
 1235_photo1:
