--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: ruby
 rvm:
   - ruby-2.0.0-p247
+env:
+  - DB=sqlite
+  - DB=mysql
+  - DB=postgresql
+script: 
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rspec spec/
+before_script:
+  - mysql -e 'create database dochi_api'
+  - psql -c 'create database dochi_api' -U postgres
+bundler_args: --binstubs=./bundler_stubs
