(Green) Implemented /decks/delete/:deck_id

--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -21,5 +21,6 @@ nancy: # facebook friend test
   fb_id: 100006521430332
   avatar_url: "https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/s32x32/48640_1250029227_884965711_q.jpg"
   email: "ljrnjeq_romansen_1375414048@tfbnw.net"
+  secret: ghi
 
 #####
